# MetaProgramming

./: CMakeLists.txt  README.md  TypeList.h  build.sh
HW1/: CMakeLists.txt  TypeList.h
HW1/tests/: CMakeLists.txt
HW1/tests/include/: test_erase.h
HW2/: CMakeLists.txt
HW2/include/: abstract_factory.h  allocator.h  hierarchy_linear.h  hierarchy_scatter.h
HW2/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_erase.cpp
